[package]
name = "ngtools"
version = "0.9.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
