[package]
name = "tests"
version = "0.1.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngtools = { path = "../ngtools"}
basetask = { path = "../basetask" }
video = { path = "../video" }
chrono = "0.4"
serde_json = "1.0"
