[package]
name = "video"
version = "0.2.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngtools = { path = "../ngtools"}
basetask = { path = "../basetask" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
